wp-content/themes/custom/scss/site/_nav.scss
$text-nav: (
	xs: (12px, 12px),
	sm: (12px, 12px),
	md: (14px, 55px),
	lg: (16px, 55px),
	xl: (19px, 53px)
	);

$nav-background: lighten($brand,5%);
$nav-background: lighten($brand,0%);

#nav{
	top: 0;
	left: 0;
	width: 100%;
	height: $nav-height;
	overflow: hidden;
	background: $nav-background;
	z-index: 7;
	transition: all .1s;

	&.fixed{
		position: fixed;
	}

	&.after{
		.nav-current{
			border-bottom: 4px solid white;

			@media screen and (max-width: $sm) {
				border-bottom: 0;
			}
		}
	}

	@media screen and (max-width: $md) {
		height: $nav-height-md;
	}

	@media screen and (max-width: $sm) {
		height: $nav-height-mobile;
		background: none;
	}

}

.menu-open{
	#nav{
		height: 100vh;
		overflow: scroll;
		background: transparentize($brand, .1);
	}

	#logo{
		box-shadow: 0px 10px 20px transparentize($brand, .25);
	}

	.hamburger{
		padding-top: 15px;
	}

	.hl-1{
		@include transform(rotate( 45deg ));
		top: 10px;

	}
	.hl-2{
		@include transform(rotate( -45deg ));
		top: 0px;
	}	
}

body.dropdown-on{
	#nav{
		background: lighten($brand,5%);

		.logo{
			top: 0;
			left: 0;
		}
	}
}

#nav-menus{
	float: right;
	padding-right: 10px;
	height: $nav-height;

	@media screen and (max-width: $md) {
		height: $nav-height-md;
	}

	@media screen and (max-width: $sm) {
		float: none;
		height: auto;
		padding: 0;
	}
}



//UPPER
#nav-menu-upper{
	@extend .clearfix;
	margin-top: 15px;
	margin-bottom: 17px;

	@media screen and (max-width: $md) {
		margin-top: 11px;
		margin-bottom: 10px;
	}

	@media screen and (max-width: $sm) {
		display: none;
	}
	
	ul{
		float: right;
		position: relative;
		left: 3px;
	}

	li{
		display: inline-block;
		margin-left: 7px;

		@media screen and (max-width: $md) {
			margin-left: 3px;
		}	

		a{
			font-size: 14px;
			@extend .bold;
			color: white;
			display: block;
			padding: 0 15px;
			@include transition(all .125s);

			&:hover{
			}

			@media screen and (max-width: $md) {
				padding: 5px;
			}

			@media screen and (max-width: $xs) {
				display: none;
			}		
		}

	}
}


//PRIMARY
#nav-menu-primary{
	@extend .clearfix;

	@media screen and (max-width: $sm) {
		padding-top: $nav-height-mobile;
	}

	li{
		display: inline-block;
		margin-left: 10px;	
		position: relative;

		.sub-menu{
			display: none;
		}

		&.sub-menu-open{
			&:after{
				content: '-';
			}

			.sub-menu{
				display: block;
			}
		}

		@media screen and (max-width: $md) {
			margin-left: 4px;
		}

		@media screen and (max-width: $sm) {
			display: block;
			border-bottom: 1px solid transparentize($light, .25);
			width: 100%;
			margin-left: 0;

			&:first-child{
				border-top: 1px solid transparentize($light, .25);
			}

			&:after{
				content: '+';
				display: block;
				position: absolute;
				right: 20px;
				top: 15px;
				color: white;
				font-size: 18px;
				opacity: .8;
			}
		}

		a{
			@include text-size($text-nav);
			@extend .bold;
			@extend .tracked-less;
			color: white;
			display: block;
			padding: 0 20px;
			@include transition(all .125s);
			height: 55px;
			vertical-align: middle;
			text-transform: uppercase;

			&:hover, &.on{
				border-bottom: 4px solid white;
				@media screen and (max-width: $sm) {
					border: 0;
				}
			}

			&:focus{
				text-decoration: none;
				outline: none;
			}

			@media screen and (max-width: 1300px) {
				padding: 0 15px;
			}

			@media screen and (max-width: $lg) {
				height: 57px;
				padding: 0 8px;
			}			

			@media screen and (max-width: $md) {
				height: 45px;
				padding: 0 6px;
				letter-spacing: .02em;
			}

			@media screen and (max-width: $sm) {
				height: auto;
				padding: 20px 20px 18px 15px;
				font-size: 15px;
				//background: transparentize($brand, .02);
				background: lighten($brand,3%);
			}

		}

		.sub-menu{
			padding-bottom: 15px;

			li{
				border-bottom: 0px solid transparentize($light, .75);

				&:last-child{
					border-bottom: 0px;
				}

				&:first-child{
					a{
						padding-top: 22px;
					}
				}

				&:after{
					content: '';
					display: none;
				}

				a{
					padding: 10px 20px 8px 35px;
					text-transform: none;
					background: none;
				}
			}
		}

	}
}



//LOGOS
#logo{
	height: inherit;
	width: $nav-height;
	float: left;

	#img-logo-sm{
		display: none;
	}

	@media screen and (max-width: $sm) {
		position: fixed;
		z-index: 9;
		width: 100%;
		float: none;
		height: $nav-height-mobile;
		background: $brand;

		#svg-logo-1{
			display: none
		}

		#img-logo-sm{
			display: block;
		}

	}

	a{
		padding: 0;
		height: inherit;
	}

	svg{
		height: 100%;
		width: auto;
	}

	#img-logo-sm{
		$logo-height: $nav-height-mobile*.9;
		$logo-width: $logo-height*2;
		width: $logo-width;
		height: $logo-height;
	}
}


.logo{

	a{
		display: block;

		@media screen and (max-width: $sm) {
			width: $nav-height-mobile*2;
		}
	}
}


//mobile nav

.hamburger{
	display: none;
	position: fixed;
	right: 15px;
	top: 10px;
	height: 40px;
	width: 28px;
	//outline: 1px solid white;
	z-index: 10;
	padding-top: 24px;

	.hamburger-line{
		display: block;
		width: 100%;
		height: 2px;
		background: white;
		margin-bottom: 8px;
		position: relative;
		transition: transform .25s;
	}

	@media screen and (max-width: $sm) {
		display: block;
	}
}


//sitewide alert

#sitewide-alert{
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: $sitewide-alert-height;
	z-index: 10;

	a{
		display: block;
	}
}

#sitewide-alert-close{
	position: absolute;
	top: 0px;
	right: 0px;
	display: block;
	width: $sitewide-alert-height;
	height: $sitewide-alert-height;

	.icon:before{
		color: white;
		font-size: 42px;
		top: 10px;
		left: 18px;
	}
}

.sitewide-alert-message{
	color: white;
	@extend .bold;
	display: block;
	text-align: center;
	line-height: $sitewide-alert-height + 3px;
	vertical-align: middle;
	text-shadow: 0px 1px 1px #aaa;
}

.sitewide-alert-on{
	#nav{
		top: $sitewide-alert-height;
	}

	&.home{
		#nav{
			.logo{
				top: $sitewide-alert-height + 25px;
			}

			&.after{
				.logo{
					top: $sitewide-alert-height;
				}
			}
		}
	}
}

